v1.1.0/modules/schema/pages/class/ErpQuoteLineItem.adoc
= `ErpQuoteLineItem`
:toclevels: 4


+++Of an ErpQuote, the item or product quoted along with quantity, price and other descriptive information.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ErpQuoteLineItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ErpIdentifiedObject.adoc[`ErpIdentifiedObject`]
*** *`ErpQuoteLineItem`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AssetModelCatalogueItem,`AssetModelCatalogueItem`>>
//| [[slots_table.AssetModelCatalogueItem]]<<AssetModelCatalogueItem,`AssetModelCatalogueItem`>>
| 0..1 +
xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`]
| _n/a_
| _n/a_

| <<Design,`Design`>>
//| [[slots_table.Design]]<<Design,`Design`>>
| 0..1 +
xref::class/Design.adoc[`Design`]
| _n/a_
| _n/a_

| <<ErpInvoiceLineItem,`ErpInvoiceLineItem`>>
//| [[slots_table.ErpInvoiceLineItem]]<<ErpInvoiceLineItem,`ErpInvoiceLineItem`>>
| 0..1 +
xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]
| +++Some utilities provide quotes to customer for services, where the customer accepts the quote by making a payment. An invoice...+++
| _n/a_

| <<ErpQuote,`ErpQuote`>>
//| [[slots_table.ErpQuote]]<<ErpQuote,`ErpQuote`>>
| 1 +
xref::class/ErpQuote.adoc[`ErpQuote`]
| _n/a_
| _n/a_

| <<ErpReqLineItem,`ErpReqLineItem`>>
//| [[slots_table.ErpReqLineItem]]<<ErpReqLineItem,`ErpReqLineItem`>>
| 0..1 +
xref::class/ErpReqLineItem.adoc[`ErpReqLineItem`]
| _n/a_
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AssetModelCatalogueItem]
=== `AssetModelCatalogueItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpQuoteLineItem.AssetModelCatalogueItem`
| Cardinality
| 0..1
| Type
| xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`]


|===

////
[.text-left]
--
<<slots_table.AssetModelCatalogueItem,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#Design]
=== `Design`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpQuoteLineItem.Design`
| Cardinality
| 0..1
| Type
| xref::class/Design.adoc[`Design`]


|===

////
[.text-left]
--
<<slots_table.Design,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ErpInvoiceLineItem]
=== `ErpInvoiceLineItem`
+++Some utilities provide quotes to customer for services, where the customer accepts the quote by making a payment. An invoice is required for this to occur.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpQuoteLineItem.ErpInvoiceLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]


|===

////
[.text-left]
--
<<slots_table.ErpInvoiceLineItem,&#10548;>>
--
////


//[discrete]
[#ErpQuote]
=== `ErpQuote`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpQuoteLineItem.ErpQuote`
| Cardinality
| 1
| Type
| xref::class/ErpQuote.adoc[`ErpQuote`]


|===

////
[.text-left]
--
<<slots_table.ErpQuote,&#10548;>>
--
////


//[discrete]
[#ErpReqLineItem]
=== `ErpReqLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpQuoteLineItem.ErpReqLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpReqLineItem.adoc[`ErpReqLineItem`]


|===

////
[.text-left]
--
<<slots_table.ErpReqLineItem,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpQuoteLineItem.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AssetModelCatalogueItem.adoc[`AssetModelCatalogueItem`] | xref::class/AssetModelCatalogueItem.adoc#ErpQuoteLineItems[`ErpQuoteLineItems`]



| xref::class/Design.adoc[`Design`] | xref::class/Design.adoc#ErpQuoteLineItem[`ErpQuoteLineItem`]



| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`] | xref::class/ErpInvoiceLineItem.adoc#ErpQuoteLineItem[`ErpQuoteLineItem`]



| xref::class/ErpQuote.adoc[`ErpQuote`] | xref::class/ErpQuote.adoc#ErpQuoteLineItems[`ErpQuoteLineItems`]



| xref::class/ErpReqLineItem.adoc[`ErpReqLineItem`] | xref::class/ErpReqLineItem.adoc#ErpQuoteLineItem[`ErpQuoteLineItem`]


|===

